_src-lp/blocks/new-prod-boxes/new-prod-boxes.css
/* ... */
.new-prod-boxes-container .block {
  margin: 0 auto;
  padding: 0 15px;
  display: flex;
  flex-direction: column;
}

.new-prod-boxes-container.new-2024 * {
  text-align: center;
}

.new-prod-boxes-container.greytos .default-content-wrapper * {
  font-size: 12px;
  line-height: 14px;
  font-weight: normal;
  color: #6F6F6F;
  text-align: center;
}

.new-prod-boxes-container.greytos .default-content-wrapper a {
  text-decoration: underline;
}

.new-prod-boxes-container .await-loader {
  min-height: 2rem;
}

.new-prod-boxes-container .tag-subtitle {
  align-content: end;
}

.new-prod-boxes-container.blue-tag-top .tag-subtitle {
  align-content: start;
}

.new-prod-boxes-container.bf-2025 .tag-subtitle {
  text-align: center;
}

.new-prod-boxes-container .subtitle p {
  margin-bottom: 0;
}

.new-prod-boxes-container.flex-height .tag-subtitle {
  min-height: 80px;
  display: flex;
  flex-direction: column;
  align-items: baseline;
  justify-content: flex-end;
}

.new-prod-boxes-container.subtitle {
  margin-bottom: -20px;
}

.new-prod-boxes-container .block .prod_box {
  flex: 1;
  margin: 1em 0;
}

.new-prod-boxes-container.book-a-demo .block .prod_box.individual-box:not(:has(~ .prod_box.individual-box)) .save_price_box *, .new-prod-boxes-container.book-a-demo .block .prod_box.individual-box:not(:has(~ .prod_box.individual-box)) .prices_box, .new-prod-boxes-container.book-a-demo .block .prod_box.family-box:not(:has(~ .prod_box.family-box)) .save_price_box *, .new-prod-boxes-container.book-a-demo .block .prod_box.family-box:not(:has(~ .prod_box.family-box)) .prices_box, .new-prod-boxes-container.book-a-demo .block .prod_box.individual-box:not(:has(~ .prod_box.individual-box)) .buy-btn, .new-prod-boxes-container.book-a-demo .block .prod_box.family-box:not(:has(~ .prod_box.family-box)) .buy-btn {
  visibility: hidden !important;
}

.new-prod-boxes-container .block .prod_box .inner_prod_box.blue-header {
  overflow: hidden;
}

.new-prod-boxes-container .block .prod_box .blue-header .header-box {
  width: 114%;
  background-color: #026DFF;
  color: white;
  margin: 0;
  margin-top: -25px;
  padding: 25px 25px 4px;
  margin-left: -25px;
}

.new-prod-boxes-container .block .prod_box .blue-header .header-box * {
  color: white;
}

.new-prod-boxes-container.width-medium .block {
  justify-content: center;
}

.new-prod-boxes-container.width-large .block {
  justify-content: center;
}

.new-prod-boxes-container .block .prod_box .inner_prod_box {
  position: relative;
  width: 100%;
  height: 100%;
  background-color: #F6F6F6;
  border-radius: 20px;
  padding: 25px;
  margin: 0 auto;
}

.new-prod-boxes-container.show-more-show-less .block .prod_box .inner_prod_box {
  padding: 20px;
}

.new-prod-boxes-container .block .prod_box .inner_prod_box .greenTag2 {
  position: absolute;
  left: 5%;
  right: 5%;
  height: fit-content;
  bottom: 100.2%;
  font-size: 14px;
  line-height: 15px;
  padding: 5px;
  font-family: Arial, sans-serif;
  color: white;
  text-align: center;
  font-weight: bold;
  background-color: #1C7928;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.new-prod-boxes-container.black-theme .block .prod_box .inner_prod_box .greenTag2 {
  background-color: #e72325;
  bottom: 100%;
  left: 0;
  right: 0;
  width: 100%;
}

.new-prod-boxes-container.veepee img {
  width: 23px;
}

.new-prod-boxes-container.veepee .block .prod_box .inner_prod_box .greenTag2 {
  background-color: #EC008C;
}

.new-prod-boxes-container .block .prod_box .inner_prod_box .bulina {
  position: relative;
  text-align: center;
  top: 0;
  right: 20px;
  width: 70px;
  height: 70px;
  border-radius: 100%;
  line-height: 11px;
  margin-left: auto;
  margin-bottom: 0;
  font-size: 10px;
  background-color: #1C7928;
  font-family: Arial, sans-serif;
  color: white;
  font-weight: bold;
  margin-top: -64px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.new-prod-boxes-container .block .prod_box .inner_prod_box .bulina .div-percent {
  font-size: 26px;
  line-height: 26px;
}

.new-prod-boxes-container .block .prod_box .inner_prod_box h2 {
  font-weight: bold;
  font-size: var(--body-font-size-m);
  line-height: var(--body-font-size-m);
  font-family: Arial, sans-serif;
  margin-top: 10px;
}

.new-prod-boxes-container.bf-2025 .block .prod_box .inner_prod_box h2 {
  text-align: center;
}

.new-prod-boxes-container.business .block .prod_box .inner_prod_box h2 {
  text-align: center;
}

.new-prod-boxes-container .block .prod_box .inner_prod_box h2 a {
  transition: all 0.5s ease;
}

.new-prod-boxes-container .block .prod_box .inner_prod_box .underBuyLink span.demoBtn {
  border: 2px solid #000;
  font-size: 14px;
  line-height: 14px;
  font-style: normal;
  color: black;
  padding: 10px;
  width: 100%;
  border-radius: 8px;
  font-weight: bold;
  display: flex;
  justify-content: center;
  margin-top: -56px;
  margin-bottom: 32px;
  cursor: pointer;
}

.new-prod-boxes-container .block .prod_box .inner_prod_box .underBuyLink span.demoBtn:hover {
  text-decoration: none;
  background-color: #000;
  color: #FFF;
}

.new-prod-boxes-container .block .prod_box .inner_prod_box .underBuyLink a {
  color: #005ED9;
}

.new-prod-boxes-container .block .prod_box .inner_prod_box .underBuyLink {
  font-size: 12px;
  font-family: Arial, sans-serif;
  line-height: 13px;
  margin: 7px 0;
  color: #000;
  text-align: center;
}

.new-prod-boxes-container.trial-links-2 .block .prod_box .inner_prod_box .underBuyLink {
  text-align: left;
  font: italic normal normal 14px/18px Arial, sans-serif;
  margin: 1em 0;
}

.new-prod-boxes-container .block .prod_box .inner_prod_box .billed a {
  text-decoration: underline;
}

.new-prod-boxes-container .block .prod_box .inner_prod_box h2 a:hover {
  text-decoration: none;
  transition: all 0.5s ease;
}
/* ... */

